--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primary:#358fce;
-  --secondary:#17171a;
-  --primary-gradient: linear-gradient(90deg, var(--primary) 0%, var(--secondary) 100%);
+  --primary: #358fce;
+  --secondary: #17171a;
+  --disable: #94969d;
+  --primary-gradient: linear-gradient(
+    90deg,
+    var(--primary) 0%,
+    var(--secondary) 100%
+  );
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,8 +34,8 @@ body::-webkit-scrollbar {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 body {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* width */
