--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,16 @@
     var(--secondary) 100%
   );
 }
+
+/* init font */
+
+@font-face {
+  font-family: "MyCustomFont";
+  src: url("/fonts/SVN-BatmanForeverAlternate.otf") format("openType");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* desktop ui */
 @media (min-width: 1310px) {
   :root {
